Update domain references and clean up chat messages
Replace fly.dev references with premiere-ecoute.fr domain and remove URL protocol prefix from chat messages for cleaner display.

## Improvements

- Update README with new premiere-ecoute.fr domain and status page link
- Remove "https://" prefix from chat messages to improve readability
- Update translations across all supported languages (EN, FR, IT)
- Clean up test expectations to match new message format

--- a/priv/gettext/default.pot
+++ b/priv/gettext/default.pot
@@ -3133,7 +3133,7 @@ msgstr ""
 
 #: lib/premiere_ecoute/sessions/listening_session/listening_session_worker.ex:101
 #, elixir-autogen, elixir-format
-msgid "You can retrieve all your notes by registering to https://premiere-ecoute.fr/ using your Twitch account"
+msgid "You can retrieve all your notes by registering to premiere-ecoute.fr using your Twitch account"
 msgstr ""
 
 #: lib/premiere_ecoute_web/live/admin/donations/donations_live.html.heex:307
