--- a/priv/gettext/it/LC_MESSAGES/default.po
+++ b/priv/gettext/it/LC_MESSAGES/default.po
@@ -3134,8 +3134,8 @@ msgstr "I voti si chiudono tra 30 secondi!"
 
 #: lib/premiere_ecoute/sessions/listening_session/listening_session_worker.ex:101
 #, elixir-autogen, elixir-format
-msgid "You can retrieve all your notes by registering to https://premiere-ecoute.fr/ using your Twitch account"
-msgstr "Puoi recuperare tutte le tue note registrandoti su https://premiere-ecoute.fr/ usando il tuo account Twitch"
+msgid "You can retrieve all your notes by registering to premiere-ecoute.fr using your Twitch account"
+msgstr "Puoi recuperare tutte le tue note registrandoti su premiere-ecoute.fr usando il tuo account Twitch"
 
 #: lib/premiere_ecoute_web/live/admin/donations/donations_live.html.heex:307
 #: lib/premiere_ecoute_web/live/admin/donations/goal_live.html.heex:405
