fix: Handle Spotify 502 errors and restore session stop playback
Adds graceful handling for Spotify API 502 (Bad Gateway) errors during playback state polling, returning the existing state instead of failing the player. Restores automatic playback pause when session stops, ensuring clean state after listening completion.

## Improvements

- Return last known playback state on Spotify 502 errors instead of crashing player
- Resume automatic pause_playback call when session stops (reverts previous defer)
- Fix French translation: "Fermer" → "Votes fermés" for closed votes label

--- a/priv/gettext/fr/LC_MESSAGES/default.po
+++ b/priv/gettext/fr/LC_MESSAGES/default.po
@@ -2477,7 +2477,7 @@ msgstr "Êtes-vous sûr de vouloir supprimer cette soumission ?"
 #: lib/premiere_ecoute_web/live/sessions/session_live.html.heex:315
 #, elixir-autogen, elixir-format, fuzzy
 msgid "Closed votes"
-msgstr "Fermer"
+msgstr "Votes fermés"
 
 #: lib/premiere_ecoute_web/live/admin/admin_albums_live.html.heex:118
 #, elixir-autogen, elixir-format, fuzzy
